--- a/src/app/components/quick-view-product-modal/quick-view-product-modal.component.html
+++ b/src/app/components/quick-view-product-modal/quick-view-product-modal.component.html
@@ -46,25 +46,18 @@
           <div class="product-details-view-content">
             <div class="product-info">
               <h3 class="mb-2">{{ productItem?.name }}</h3>
-              <div class="product-rating d-flex">
+              <div class="product-rating d-flex align-items-center">
                 <ul class="d-flex">
-                  <li>
-                    <i class="fa-regular fa-star"></i>
-                  </li>
-                  <li>
-                    <i class="fa-regular fa-star"></i>
-                  </li>
-                  <li>
-                    <i class="fa-regular fa-star"></i>
-                  </li>
-                  <li>
-                    <i class="fa-regular fa-star"></i>
-                  </li>
-                  <li>
-                    <i class="fa-regular fa-star"></i>
-                  </li>
+                  <ng-container *ngFor="let star of [1, 2, 3, 4, 5]">
+                    <i
+                      class="fa-star"
+                      [class.fa-solid]="star <= productItem.avgStar"
+                      [class.fa-regular]="star > productItem.avgStar"></i>
+                  </ng-container>
                 </ul>
-                <a class="ms-2">(<span class="count">1</span> đánh giá)</a>
+                <div class="ms-2">
+                  (<span class="count">{{ listRating.length }}</span> đánh giá)
+                </div>
               </div>
               <div
                 class="price-box primary-color fw-500 mb-3 mt-2 w-100 text-size-large">
