--- a/src/styles.scss
+++ b/src/styles.scss
@@ -111,3 +111,11 @@ h6 {
   content: " *";
   color: red;
 }
+
+.card {
+  border-color: #e9ebec;
+}
+
+.card-header {
+  background-color: $white;
+}
