--- a/src/app/pages/collections/collections.component.scss
+++ b/src/app/pages/collections/collections.component.scss
@@ -1,31 +1,6 @@
 @import "color";
 @import "text-size";
 
-.shop-box-area {
-  border: 1px solid #ebebeb;
-  border-radius: 3px;
-  padding: 20px;
-}
-
-.shop-sidebar h4 {
-  font-size: $text-medium;
-  font-weight: 500;
-  color: $black;
-  margin-bottom: 25px;
-  padding-bottom: 15px;
-  position: relative;
-
-  &::before {
-    position: absolute;
-    content: "";
-    background: #ebebeb;
-    width: 100%;
-    height: 1px;
-    left: 0;
-    bottom: -1px;
-  }
-}
-
 .shop-item-filter-list li .active {
   color: $primary-color;
 }
@@ -33,55 +8,6 @@
 .shop-item-filter-list li a {
   margin-right: 10px;
   font-size: $text-medium;
-}
-
-.category-sub-menu ul li.has-sub > a {
-  color: #363f4d;
-  cursor: pointer;
-  display: block;
-  font-size: $text-small;
-  line-height: 14px;
-  padding: 10px 0 10px 0px;
-  position: relative;
-}
-
-.category-sub-menu ul li.has-sub > a:after {
-  color: $brown;
-  content: "";
-  font-family: FontAwesome;
-  font-size: $text-small;
-  position: absolute;
-  right: 5px;
-}
-
-.filter-price-wapper .add-to-cart-button {
-  background: $brown;
-  display: inline-block;
-  font-weight: 500;
-  padding: 4px 13px;
-  right: 0;
-  color: $white;
-  border-radius: 5px;
-  margin-bottom: 10px;
-}
-
-.filter-price-cont {
-  font-size: $text-x-small;
-  margin-bottom: 10px;
-}
-
-.sidebar-tag li {
-  display: inline-block;
-}
-
-.sidebar-tag li > a {
-  border: 1px solid #ddd;
-  color: $brown;
-  font-size: $text-x-small;
-  margin: 10px 10px 0 0;
-  padding: 4px 15px;
-  border-radius: 5px;
-  text-transform: capitalize;
 }
 
 .shop-top-bar {
@@ -93,4 +19,130 @@
 
 .product-sort p {
   width: 40%;
+}
+
+.filter-btn {
+  border: 1px solid #d7d7d7;
+  border-radius: 8px;
+  text-transform: uppercase;
+  font-weight: 400;
+  font-size: 13px;
+  padding: 0 16px;
+  height: 40px;
+  line-height: 38px;
+}
+
+.filter-dropdown {
+  top: calc(100% + 10px);
+  width: 800px;
+  border: thin solid #e0dede;
+  border-radius: 1em;
+  background: $white;
+  z-index: 10;
+  left: 0;
+  box-shadow: rgba(0, 0, 0, 0.24) 0 3px 8px;
+  cursor: default;
+}
+
+.filter-item {
+  background: $white;
+  border: thin solid #e0dede;
+  margin-right: 10px;
+  border-radius: 6px;
+  font-weight: 400;
+  padding: 2px 10px;
+  font-size: 13px;
+  border-width: thin;
+  cursor: pointer;
+
+  input {
+    position: absolute;
+    width: 0;
+    height: 0;
+    overflow: hidden;
+    z-index: -1;
+    left: -99999px;
+  }
+}
+
+.filter-footer {
+  border-top: thin solid #ddd;
+  padding-top: 1rem;
+  margin: 1rem 0 0;
+  display: flex;
+  justify-content: center;
+
+  a {
+    border: thin solid #ddd;
+    border-radius: 6px;
+    font-size: 13px;
+    padding: 3px 16px;
+    cursor: pointer;
+    font-weight: 400;
+  }
+
+  .apply-filter {
+    margin-left: 1rem;
+    background: $primary-color;
+    color: $white;
+  }
+}
+
+.filter-active {
+  border: 1px solid $primary-color;
+  color: $primary-color;
+}
+
+.general-filter-container {
+  height: 40vh;
+  max-height: 50vh;
+  overflow-y: auto;
+}
+
+@media only screen and (max-width: 1000px) {
+  .hide-filter {
+    display: none;
+  }
+
+  .filter-container {
+    justify-content: center;
+  }
+}
+
+@media only screen and (max-width: 1000px) and (min-width: 769px) {
+  .filter-dropdown {
+    position: fixed !important;
+    max-width: 92vw !important;
+    top: 44% !important;
+    left: calc(50% - 1.5vw) !important;
+    transform: translate(-50%, -50%) !important;
+  }
+}
+
+@media only screen and (max-width: 800px) and (min-width: 769px) {
+  .filter-dropdown {
+    left: calc(50% - 1.5vw) !important;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .filter-dropdown {
+    position: fixed !important;
+    max-width: 96vw !important;
+    top: 44% !important;
+    left: 50% !important;
+    transform: translate(-50%, -50%) !important;
+  }
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: rgb(209, 204, 204);
+}
+
+::-webkit-scrollbar-thumb {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
